<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Estadistica">

    <TextView
        android:id="@+id/etx_titulo4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/byzantium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/etx_titulo2"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:id="@+id/etx_tituloConsejos"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/etx_estadistica"
        android:textColor="#0E7A70"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etx_titulo4"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:id="@+id/estadistica"
        android:layout_width="415dp"
        android:layout_height="583dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/planta1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etx_titulo4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/analitica"
                    android:layout_marginBottom="10dp"
                    android:scaleType="centerInside"
                    android:layout_marginStart="10dp"/>


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />


            <TableLayout
                android:id="@+id/Table1"
                android:layout_width="match_parent"
                android:layout_height="279dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="3dp"
                        android:background="@color/byzantium"
                        android:textAlignment="center"
                        android:padding="5dp"
                        android:text="@string/Name1"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:background="@color/byzantium"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:text="@string/fecha"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_marginStart="3dp"
                        android:textAlignment="center"
                        android:background="@color/byzantium"
                        android:padding="5dp"
                        android:text="@string/promedioArboles"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_marginStart="3dp"
                        android:textAlignment="center"
                        android:background="@color/byzantium"
                        android:padding="5dp"
                        android:text="@string/costoPromedio"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/byzantium"
                        android:layout_marginEnd="3dp"
                        android:layout_marginStart="3dp"
                        android:textAlignment="center"
                        android:padding="5dp"
                        android:text="@string/zonaSiembra"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                </TableRow>

            </TableLayout>


            <Button
                android:id="@+id/btnCargasEstad"
                android:layout_width="320dp"
                android:layout_height="57dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/byzantium"
                android:padding="10dp"
                android:text="@string/btnCargasEstad"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imgInicioEstadistica"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/imgdesc4"
                app:srcCompat="@drawable/inicio" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>