<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consejos1">
    <TextView
        android:id="@+id/etx_titulo3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/byzantium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/etx_titulo2"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etx_tituloConsejos"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/etx_consejos"
        android:textColor="#009688"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etx_titulo3" />

    <Spinner
        android:id="@+id/spinnerPlanta"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="7dp"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etx_tituloConsejos"
        android:layout_marginTop="100dp"/>

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="414dp"
        android:layout_height="566dp"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerPlanta"
        app:layout_goneMarginTop="21dp">

        <LinearLayout
            android:layout_width="414dp"
            android:layout_height="650dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="182dp"
                android:layout_height="149dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/imgdesc3"
                app:srcCompat="@drawable/arbol1" />


            <ScrollView
                android:layout_width="320dp"
                android:layout_height="170dp"
                android:layout_margin="7dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="170dp">

                    <TextView
                        android:id="@+id/tecnicaPlantar"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:background="#009688"
                        android:padding="3dp"
                        android:text="@string/txttecnicaPlantar"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:translationY="20sp" />
                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:layout_width="320dp"
                android:layout_height="170dp"
                android:layout_margin="7dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/seleccionEspecies"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:background="#009688"
                        android:padding="3dp"
                        android:text="@string/txtSeleccionEspecies"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:translationY="20sp" />
                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:layout_width="320dp"
                android:layout_height="170dp"
                android:layout_margin="7dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cuidadoArboles"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:background="#009688"
                        android:padding="3dp"
                        android:text="@string/txtCuidadoArboles"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:translationY="20sp" />
                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/btnConsejos"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_margin="27dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/btn1"
                android:text="@string/btnConsultar"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imgInicioConsejo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="100dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/inicio" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>