<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reforestar2"
    android:visibility="visible"
    tools:context=".Inicio">

    <TextView
        android:id="@+id/etx_titulo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/byzantium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/etx_titulo2"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etx_titulo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInpLaNombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:hint="@string/inpUsuario"
            android:textColorHint="@color/dark_green"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxCornerRadiusTopStart="24dp"
            app:counterEnabled="true"
            app:counterMaxLength="21"
            app:endIconMode="clear_text"
            app:helperText="Usuario"
            app:helperTextTextColor="@color/dark_green"
            app:startIconDrawable="@drawable/usuario1"
            app:startIconTint="@color/pink_crayola"
            tools:ignore="TextSizeCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/dark_green"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@android:color/system_accent1_100"
                tools:targetApi="s" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpLaZona"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:hint="@string/inpDocumento"
            android:textColorHint="@color/dark_green"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxCornerRadiusTopStart="24dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:endIconMode="clear_text"
            app:helperText="Contraseña"
            app:helperTextTextColor="@color/dark_green"
            app:startIconDrawable="@drawable/contrasena"
            app:startIconTint="@color/pink_crayola">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpZona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/dark_green"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@android:color/system_accent1_100"
                tools:targetApi="s" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn1"
            android:text="@string/btn_inicio"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/txt_forgot"
            android:textColor="#0F4904"
            android:textSize="21sp"
            android:textStyle="bold"
            android:background="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/registro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistrar" />

        <TextView
            android:id="@+id/registro"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/txt_register"
            android:textColor="#0F4904"
            android:textSize="21sp"
            android:textStyle="bold"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/forgot"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistrar" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="3dp"
            android:src="@drawable/arbol1" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>